--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -25,7 +25,7 @@ jobs:
         pip install -U pip
         # We manually upgrade it to make the builds stable
         pip install black==22.1.0
-      name: Format with black
+    - name: Format with black
       run: |
         black .
         if git status --porcelain | grep .; then git --no-pager diff; exit 1; fi
