--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-slack-bolt
+# slack-bolt
+/Users/wbergamin/Documents/slack/tools/forks/bolt-python/dist/slack_bolt-1.14.3-py2.py3-none-any.whl
 pytest
 flake8==5.0.4
 black==22.8.0
