--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -150,8 +150,7 @@
               ],
               "required": [
                 "channel",
-                "message",
-                "interactivity"
+                "message"
               ]
             }
           }
