Add explicit function_runtime

--- a/manifest.json
+++ b/manifest.json
@@ -55,7 +55,8 @@
     },
     "org_deploy_enabled": true,
     "socket_mode_enabled": true,
-    "token_rotation_enabled": false
+    "token_rotation_enabled": false,
+    "function_runtime": "remote"
   },
   "functions": {
     "sample_function": {
