--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Formatting validation using black
+name: Run unit tests
 
 on:
   push:
@@ -6,12 +6,12 @@ on:
   pull_request:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     strategy:
       matrix:
-        python-version: ["3.13"]
+        python-version: ["3.11", "3.12", "3.13"]
 
     steps:
       - uses: actions/checkout@v4
@@ -23,7 +23,6 @@ jobs:
         run: |
           pip install -U pip
           pip install -r requirements.txt
-      - name: Format with black
+      - name: Run all tests
         run: |
-          black .
-          if git status --porcelain | grep .; then git --no-pager diff; exit 1; fi
+          pytest . -v
