--- a/manifest.json
+++ b/manifest.json
@@ -51,7 +51,7 @@
       "interactivity": {
           "is_enabled": true
       },
-      "org_deploy_enabled": false,
+      "org_deploy_enabled": true,
       "socket_mode_enabled": true,
       "token_rotation_enabled": false
   }
