build: lint and format with ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
-[tool.black]
+[tool.ruff]
 line-length = 125
+exclude = [".venv", "venv"]
+
+[tool.ruff.format]
+quote-style = "double"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
