--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,8 +1,9 @@
-name: Run unit tests
+name: Tests
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
 
 jobs:
@@ -11,8 +12,11 @@ jobs:
     timeout-minutes: 5
     strategy:
       matrix:
-        python-version: ["3.11", "3.12", "3.13"]
-
+        python-version:
+          - "3.11"
+          - "3.12"
+          - "3.13"
+          - "3.14"
     steps:
       - uses: actions/checkout@v6
       - name: Set up Python ${{ matrix.python-version }}
@@ -23,6 +27,10 @@ jobs:
         run: |
           pip install -U pip
           pip install -r requirements.txt
+      - name: Lint and check formatting
+        run: |
+          ruff check .
+          ruff format --check .
       - name: Run all tests
         run: |
           pytest . -v
